# HyperDragShare

./: .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle
.github/workflows/: release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  NOTICE  text_segmenter_jni.cpp
app/src/main/java/com/example/dragshare/: AccessibilityBlacklist.java  AccessibilityCandidate.java  AccessibilityCandidateSelector.java  AccessibilityContentCaptureSource.java  (+48 more)
app/src/main/java/smartisanos/util/: SidebarUtils.java
app/src/main/res/color/: boom_chip_text_color.xml
app/src/main/res/color-night/: boom_chip_text_color.xml
app/src/main/res/drawable/: boom_background_color.xml  boom_chips_all_cut.xml  ic_about_foreground.xml  ic_copy.xml  ic_download.xml  ic_launcher_foreground.xml  ic_share.xml  ic_text_segment.xml
app/src/main/res/drawable-night/: boom_background_color.xml  boom_chips_bg.xml  boom_chips_bg_normal.xml  boom_chips_bg_pressed.xml  boom_chips_punctuate.xml  boom_chips_punctuate_normal.xml  boom_chips_punctuate_pressed.xml  boom_mask_bottom.xml  boom_multi_select_bg.xml
app/src/main/res/layout/: boom_activity_layout.xml  multi_select_bar.xml
app/src/main/res/values/: arrays.xml  boom_dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: drag_share_accessibility_service.xml
app/src/main/res/xml-v30/: drag_share_accessibility_service.xml
docs/: ACCESSIBILITY_CONTENT_CAPTURE_PLAN.md  IMPLEMENTATION.md
gradle/wrapper/: README.txt
(+101 files in other folders)
